--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,17 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.derby/derby -->
-        <dependency>
-            <groupId>org.apache.derby</groupId>
-            <artifactId>derby</artifactId>
-            <version>10.17.1.0</version>
-        </dependency>
+		<dependency>
+		    <groupId>org.apache.derby</groupId>
+		    <artifactId>derby</artifactId>
+		    <version>10.16.1.1</version>
+		</dependency>
+	<!-- https://mvnrepository.com/artifact/org.apache.derby/derbytools -->
+		<dependency>
+		    <groupId>org.apache.derby</groupId>
+		    <artifactId>derbytools</artifactId>
+		    <version>10.16.1.1</version>
+		</dependency>
     </dependencies>
 
 </project>
