--- a/Entrega4/monopatin/src/main/resources/application.properties
+++ b/Entrega4/monopatin/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-spring.application.name=mscv-monopatin
-
+spring.application.name=monopatin
 server.port=8084
 
-# URI de conexion a mongoDB
-spring.data.mongodb.uri=mongodb://root:password@localhost:27017/db_monopatines?authSource=admin
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/monopatines?createDatabaseIfNotExist=true
 
-# Opcional para mas legibilidad del nombre de la coleccion
-spring.data.mongodb.database=db_monopatines
-
-
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create-drop
