--- a/Entrega4/viajes/src/main/resources/application.properties
+++ b/Entrega4/viajes/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 spring.application.name=viajes
-
 server.port=8088
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/viajes?createDatabaseIfNotExist=true
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=db_mongo
+spring.data.mongodb.username=root
+spring.data.mongodb.password=password
+spring.data.mongodb.uri=mongodb://root:password@localhost:27017/db_mongo?authSource=admin
 
-spring.jpa.show-sql=true
-spring.jpa.database=mysql
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=update
