--- a/Entrega4/docker-compose.yml
+++ b/Entrega4/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
-      MONGO_INITDB_DATABASE: db_monopatines
+      MONGO_INITDB_DATABASE: db_mongo
     volumes:
       - mongo_data:/data/db
     restart: always
