--- a/Entrega4/usuario/pom.xml
+++ b/Entrega4/usuario/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-crypto</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.mysql</groupId>
