--- a/Entrega4/admin/pom.xml
+++ b/Entrega4/admin/pom.xml
@@ -72,6 +72,7 @@
                         <exclude>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>1.18.42</version>
                         </exclude>
                     </excludes>
                 </configuration>
