--- a/Entrega4/facturacion/pom.xml
+++ b/Entrega4/facturacion/pom.xml
@@ -93,6 +93,7 @@
                         <exclude>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
+                            <version>1.18.42</version>
                         </exclude>
                     </excludes>
                 </configuration>
