--- a/Entrega4/tarifas/pom.xml
+++ b/Entrega4/tarifas/pom.xml
@@ -53,11 +53,13 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
+
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
         </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
