--- a/Entrega4/viajes/pom.xml
+++ b/Entrega4/viajes/pom.xml
@@ -52,13 +52,12 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
 
-
-        <!-- Tests -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.5.0</version>
         </dependency>
+
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
